Spacing Issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,6 @@ button {
 
 .green {
   display: inline;
-  width: 15%;
-  margin: auto;
+  width: 25%;
   background: #7CD05D;
 }
